complete: first milestone

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
           }),
           success: function (response) {
             const answer = response.answer;
-            $("#answer").text("Answer: " + answer);
+            $("#answer").text(answer)
           },
           error: function (error) {
             console.log(error);
